--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "JSONPath": "^0.10.0"
   },
   "devDependencies": {
+    "mocha": "^2.4.5",
     "chai": "^1.10.0",
     "karma": "^0.12.31",
     "karma-browserify": "^2.0.0",
